Practica 1 - Juan Diego Torres

--- a/Practica 1/index.html
+++ b/Practica 1/index.html
@@ -8,7 +8,7 @@
         content="width=device-width, initial-scale=1.0"
     >
     <title>Mi primera página web - Práctica 1</title>
-    <!-- PRÁCTICA 1: NO incluir CSS ni JS -->
+
 </head>
 
 <body>
@@ -57,9 +57,8 @@
                 <figcaption>Logo representativo del lenguaje HTML5</figcaption>
             </figure>
 
-            <p>Indicador de progreso (texto dentro de un elemento &lt;nav&gt;):</p>
+            <p>Nav</p>
 
-            <!-- Reemplazo: división cambiada por un elemento nav simple -->
             <nav id="progreso">70% completado</nav>
         </section>
     </main>
