Practica 2 - Juan Diego Torres

--- a/Practica 2/index.html
+++ b/Practica 2/index.html
@@ -7,15 +7,15 @@
         name="viewport"
         content="width=device-width, initial-scale=1.0"
     >
-    <title>Mi primera página web - Práctica 1</title>
+    <title>Práctica 2</title>
     <link rel="stylesheet" href="style.css">
     <script defer src="script.js"></script>
 </head>
 
 <body>
     <header>
-        <h1 id="titulo">Mi primera página con estándares web</h1>
-        <h2>Unidad 1.2 – Estándares Web</h2>
+        <h1 id="titulo">Estándares web</h1>
+        <h2>Estándares Web</h2>
     </header>
 
     <main>
@@ -55,10 +55,8 @@
         <figcaption>Logo representativo del lenguaje HTML5</figcaption>
       </figure>
 
-      <!-- DIV simple en lugar de nav/progress -->
       <div id="progresoDiv" style="height:18px;"></div>
 
-      <!-- Texto pequeño después de la división -->
       <p><small>Pequeño texto después del div</small></p>
     </section>
 
