Practica 2 - Juan Diego Torres

--- a/Practica_2/index.html
+++ b/Practica_2/index.html
@@ -56,7 +56,8 @@
       </figure>
 
       <div id="progresoDiv" style="height:18px;"></div>
-
+        <img src="Con_CSS.png" alt="Imagen con CSS">
+        <img src="Sin_CSS.png" alt="Imagen sin CSS">
       <p><small>Pequeño texto después del div</small></p>
     </section>
 
